# ne402_final_project

./: README.md  pyproject.toml  requirements.txt
src/: avg_flux_from_hot_flux.py  consts.py  critical_heat_flux.py  dimensionless_numbers.py  dual_plotter.py  enthalpy.py  friction_factor.py  heat_flux.py  main.py  pp_density.py  pp_forms_multiplier.py  pp_friction_multiplier.py  pressure_drop.py  quality.py  reactor.py  temperature_analysis.py  void_fraction.py  water.py
src/utilities/: answer.py
src/utilities/data/: format_plot.py  import_data.py  palettes.py  save_plot.py
src/utilities/units/: consts.py  conversions.py  iapws97_imperial.py
